# aitrade

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.example.yaml  create-deps.sh  deploy.sh  init-env.sh  main.py  package.sh  pyproject.toml  query-trades.sh  requirements.txt  start.sh  status.sh  stop.sh
aitrade/: __main__.py
aitrade-be/: CLAUDE.md  README.md  config.example.yaml  deploy.sh  init-env.sh  package.sh  pyproject.toml  query-trades.sh  start-web.sh  start.sh  status-web.sh  stop-web.sh
aitrade-be/aitrade/: __main__.py  bot_runner.py  web_runner.py
aitrade-be/aitrade/config/: config_file.py  log_config.py  path_utils.py
aitrade-be/aitrade/db/: __init__.py  models_admin.py  models_backtest.py  models_runtime.py  models_runtime_log.py  models_trade.py  session.py
aitrade-be/aitrade/trade/: trade.py
aitrade-be/aitrade/web/: api_response.py  app.py  dependencies.py  exceptions.py
aitrade-fe/: .gitkeep  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
aitrade-fe/src/: App.vue  main.ts
aitrade-fe/src/api/: auth.ts  backtests.ts  http.ts  strategies.ts  system.ts  tradeLogs.ts  users.ts
aitrade-fe/src/components/: AppBreadcrumb.vue  FusionStrategyBuilder.vue  StrategyParamForm.vue
aitrade-fe/src/layouts/: BasicLayout.vue
aitrade-fe/src/router/: index.ts
aitrade/config/: config.py  config_file.py  log_config.py
aitrade/trade/: gpt_signal.py  trade.py
config/: config.py  log_config.py
docs/: api.md  architecture.md  backend.md  frontend.md  operations.md
trade/: gpt_signal.py  trade.py
(+97 files in other folders)
