[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aitrade"
version = "0.1.0"
description = "A simple AI trading bot."
requires-python = "==3.14.*"
dependencies = [
    "ccxt==4.5.14",
    "colorlog==6.10.1",
    "httpx==0.28.1",
    "numpy==2.3.4",
    "openai==2.6.1",
    "pandas==2.3.3",
    "PyYAML==6.0.3",
]

[tool.setuptools.packages.find]
include = ["aitrade*"]
